# Logging-system

./: CMakeLists.txt  LICENSE  Logger.cpp  Logger.h  README.md  main.cpp  test
